--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+#  spring:
+#    mvc:
+#      pathmatch:
+#        matching-strategy: ant_path_matcher
+
 # swagger-ui custom path
 springdoc:
   packagesToScan: com.dlucchesi.yhfin.controller.imp
